# contextpack

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
contextpack/: __init__.py  compress.py  corpus.py  eval.py  score.py
examples/: quickstart.py
tests/: test_contextpack.py
