[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextpack"
version = "0.1.0"
description = "Shrink a prompt without shrinking the answer. LLMLingua-style prompt compression with a benchmark that measures tokens saved against keyword recall."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["llm", "prompt-compression", "context-window", "tokens", "cost", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/contextpack"

[tool.hatch.build.targets.wheel]
packages = ["contextpack"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E9", "F", "I"]
